apps/sample-todo-app/.kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-todo-app-service
  namespace: default
  labels:
    app: sample-todo-app
spec:
  selector:
    app: sample-todo-app
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
